--- a/index.html
+++ b/index.html
@@ -689,53 +689,1108 @@
         const artistConfig = {
             judy: { 
                 name: "女歌 Judy", 
-                songs: `阿刁
+                songs: 
+`
+阿刁
 爱
 爱上一个不回家的人
 爱不爱我
-爱之初体验` 
+爱人跟人走（台）
+爱拼才会赢（台）
+爱之初体验
+爱什么稀罕
+爱你A.I.N.Y
+爱你在心口难开
+爱囚
+爱如潮水
+爱很简单
+爱的箴言
+爱要坦荡荡
+爱要怎么说出口
+爱要有你才完美
+爱情的骗子我问你（台）
+爱我的人和我爱的人
+爱的供养
+爱一个人好难
+爱我别走
+爱的主打歌
+安妮
+暗香
+Bad Boy
+不管有多苦
+不再犹豫（粤）
+不在乎他
+不让我的眼泪陪我过夜
+不必太在意
+不值得
+别在伤口撒盐
+北京一夜
+北方的狼
+白天不懂夜的黑
+把耳朵叫醒
+宝贝对不起
+存在
+偿还
+传奇
+丑八怪
+成都
+城里的月光
+晨间新闻
+赤伶
+趁早
+出卖
+错位时空
+但愿人长久
+大约在冬季
+多幸运
+丹顶鹤的故事
+倒数
+冬天里的一把火
+单身情歌
+大海
+大鱼
+大风吹
+对你爱不完
+带我到山顶
+当
+当我开始偷偷的想你
+当爱在靠近
+滴答滴
+电台情歌
+短发
+胆小鬼
+放开
+风吹麦浪
+风流女生
+风的季节（粤）
+凡人歌
+光年之外
+光辉岁月（粤）
+关键词
+干杯.朋友
+刚好遇见你
+感恩的心
+告白气球
+改变自己
+给我一个吻
+跟着感觉走
+花心
+何日君再来
+过火
+过客
+海阔天空（粤）
+后来
+嗨歌
+挥着翅膀的女孩
+回家
+好胆你就来
+火
+红玫瑰
+红豆
+红颜
+剪爱
+加速度
+姐妹
+姐姐妹妹站起来
+寂寞先生
+就现在
+江南
+解脱
+讲真的
+酒干倘卖无
+记事本
+空心
+空空如也
+可惜不是你
+可惜没如果
+哭不出来
+开门见山
+快乐的人请举手
+两个人的回忆一个人过
+李白
+来自天堂的魔鬼
+离不开你
+离歌
+离人愁
+兰花草
+蓝天
+领悟
+龙卷风
+龙的传人
+绿岛小夜曲
+老鼠爱大米
+梦一场
+梦醒了
+梦醒时分
+没离开过
+没那么简单
+闷
+魔鬼中的天使
+默
+梅花三弄
+漫步人生路（粤）
+眉飞色舞
+明天你是否依然爱我
+明天会更好
+南屏晚钟
+你的眼睛像星星
+你一定要幸福
+你不是真正的快乐
+你怎么舍得我难得
+你把我灌醉
+你的眼神
+你的酒馆对我打了佯
+你知道我在等你吗
+你还要我怎样
+你怎么说
+恼人的秋风
+女儿情
+女人花
+男孩
+朋友（周华健）
+泡沫
+漂洋过海来看你
+飘雪（粤）
+情非得已
+前门情思大碗茶
+囚鸟
+千千阙歌（粤）
+千年之恋
+起风了
+敲敲我的头
+千年等一回
+情网
+青苹果乐园
+青藏高原
+千言万语
+牵丝戏
+亲密爱人
+如愿
+如果云知道
+如果没有你
+让我欢喜让我忧
+让我一次爱个够
+super star
+水中花
+三天三夜
+失恋阵线联盟
+十年
+伤痕
+少年
+说唱脸谱
+说散就散
+身骑白马
+他一定很爱你
+特别的爱给特别的你
+体面
+同桌的你
+听海
+天涯歌女
+天路
+太委屈
+太阳
+跳进来
+桃花诺
+桃花朵朵开
+问
+无人之岛
+无地自容
+我要找到你
+我的好兄弟
+我和草原有个约定
+我要你
+我是一只小小鸟
+我最亲爱的
+我的未来不是梦
+我想有个家
+我可以抱你吗
+我只在乎你
+为你我受冷风吹
+为爱痴狂
+味道
+往事随风
+外婆的澎湖湾
+外面的世界
+往后余生
+忘记拥抱
+忘了没有
+忘情水
+悟空
+我在人民广场吃炸鸡
+我好想你
+我怀念的
+我是不是你最疼爱的人
+我曾用心的爱着你
+我的心里只有你没有他
+我的歌声里
+我的秘密
+我相信
+我等到花儿也谢了
+吻别
+新贵妃醉酒
+信仰
+像鱼
+喜欢你（粤）
+小情歌
+想你的夜
+想着你的感觉
+新不了情
+相见恨晚
+辛德瑞拉
+星语心愿
+陷阱
+潇洒走一回
+谢谢你的爱
+小城故事
+香水有毒
+下个，路口，见
+一个人的精彩
+一生何求（粤）
+一人有一个梦想（粤）
+一个人跳舞
+一想到你呀
+一生所爱（粤）
+一样的月光
+一无所有
+一支小雨伞（台）
+友谊之光（粤）
+勇气
+原来你什么都不想要
+愿赌服输
+因为爱所以爱
+夜夜夜
+夜来香
+夜上海
+易燃易爆炸
+映山红
+云与海
+月亮代表我的心
+月半小夜曲（粤）
+月牙湾
+月亮之上
+隐形的翅膀
+有多少爱可以重来
+用心良苦
+远走高飞
+遇见
+野子
+野百合也有春天
+野花
+雨花石
+雨蝶
+愿得一人心
+值得
+再见
+再回首
+再见只是陌生人
+张三的歌
+怎么说我不爱你
+执着
+最浪漫的事
+最熟悉的陌生人
+最美
+最美的期待
+最炫民族风
+自由飞翔
+真情人
+至少还有你
+走着走着就散了
+走马
+追梦人
+掌声响起
+只有你过得比我好
+爱是你我
+美丽的神话
+广岛之恋
+今天你要嫁给我
+铁血丹心
+世间始终你好
+天下有情人
+想把我唱给你听
+刀马旦
+相思风雨中
+因为爱情
+制造浪漫
+知心爱人
+有一点动心
+明明白白我的心
+你莫走
+Can't take my eyes off you
+Careless whisper
+Close to you
+Cheap thrills
+Dance monkey
+Diamonds
+Don't know why
+Dream a little dream
+Dum tek tek
+Eternal flame
+Fly me to the moon
+Give one reason
+God is a girl
+Hero
+Honey
+Honey,i'm home
+Hotel california
+How do i live
+I kissed a girl
+I will always love you
+I hate myself for loving you
+Knocking on heaven's door
+Killing me softly
+Loving you
+La isla bonida
+Man i feel like woman
+My heart will go on
+Price tag
+Rolling in the deep
+Sha la la
+Sunrise
+Superstar
+Smooth operator
+This masquerade
+Try
+The power of love
+Unbreak my heart
+Underneath your clothes
+Venus
+What's up
+Whataya want from me
+Without you
+You're still the one
+Yesterday once more
+
+` 
             },
             ting: { 
                 name: "女歌 小婷", 
-                songs: `乌兰巴巴托的夜
+                songs: 
+`
+乌兰巴巴托的夜 
 旅行
 阳光彩虹小白马
 把悲伤留给自己
-生而为人` 
+生而为人
+男孩
+时间煮雨
+岁月神偷
+趁你还年轻
+爱
+花心
+有多少爱可以重来
+好久不见
+像鱼
+红玫瑰
+魔鬼中的天使
+不要怕
+羞答答的玫瑰静悄悄的开
+这世界那么多人
+说散就散
+后来
+亲爱的小孩
+你就不要想起我
+我的声音
+姐姐妹妹站起来
+像我这样的人
+易燃易爆炸
+我管你
+那些花儿
+没那么简单
+我好像在哪见过
+我们的爱
+可惜不是你
+A hundred miles
+爱丫爱丫
+不该用情
+演员
+胡广生
+斑马斑马
+我很快乐
+到不了
+刚刚好
+我等到花儿也谢了
+七月上
+其实都没有
+红豆 
+你要跳舞吗
+第一次爱的人
+空心
+奇迹再现 
+不醉不会
+带我到山顶
+给我一个理由忘记 
+我们的时光
+雨蝶
+睫毛弯弯
+说散就散
+我很快乐
+失恋阵线联盟
+别错过
+走过咖啡屋
+谁
+Lydia 
+恭喜发财
+伤心的人别听慢歌
+隐形的翅膀
+至少还有你
+暖暖
+追光者
+爱人错过
+相爱后动物感伤
+爱的初体验
+如果你也听说
+离开地球表面
+哈哈哈 
+桃花诺
+推开世界的门
+日不落
+百年孤寂
+看月亮爬上来
+刚刚好
+感官先生
+头发乱了
+咕叽咕叽
+逆光
+风的季节
+饿狼传说
+晚婚
+执迷不悔
+处处吻E
+离别开出花
+好胆你就来
+为你唱首歌
+再见琳尼多了
+表白
+爱笑的眼睛
+欧若拉
+在加纳共和国离婚
+潇洒小姐
+字字句句
+若是月亮还没来
+恋爱ing
+阳光宅男
+作曲家
+我要夏天
+你的微笑
+不想长大
+
+` 
             },
             zhiyu: { 
                 name: "男歌 致宇", 
-                songs: `像梦一样自由    汪峰
-夕阳醉了\t\t张学友
-童话\t\t       光良
-不再犹豫\t\tBeyond 
-护花使者\t\t李克勤` 
+                songs: 
+`
+像梦一样自由    汪峰
+夕阳醉了		张学友
+童话		       光良
+不再犹豫		Beyond 
+护花使者		李克勤
+浮夸		       陈奕迅
+十年		       陈奕迅
+只是太爱你		张敬轩
+淘汰		       陈奕迅
+花心		       周华健
+兄弟 		       任贤齐
+在他乡		      水木年华
+爱我的人和我爱的人		游鸿明
+暗里着迷		刘德华
+今天		       刘德华
+挪威的森林		伍佰
+再回首		       姜育恒
+偷心		       张学友
+好想好想		古巨基
+我是愤怒		Beyond 
+从头再来		崔健
+Monica		       古巨基
+再度重相逢		伍佰
+风往北吹		孙楠
+遥远的她		张学友
+乱世巨星		陈小春
+红日		       李克勤
+改变自己		王力宏
+讲不出再见		谭咏麟
+小小的太阳		张宇
+凡人歌		       李宗盛
+难念的经		周华健
+谢谢你的爱		刘德华
+一生所爱		李克勤
+一生中最爱		谭咏麟
+一生不变		李克勤
+独家记忆		陈小春
+背叛		       曹格
+忘了你忘了我		王杰
+平凡之路		朴树
+别让我一个醉		姜育恒
+一起走过的日子		刘德华
+富士山下		陈奕迅
+你怎么舍得我难过		黄品源
+安妮		王杰
+不将就		李荣浩
+十七岁		刘德华
+忘记你我做不到		张学友
+风往北吹		       孙楠
+如果这都不算爱		张学友
+普通朋友		陶喆
+爱不爱我		零点乐队
+那就这样吧		动力火车
+南方姑娘		赵雷
+暗香		       沙宝亮
+突然好想你		五月天
+回头太难		张学友
+爱很简单		陶喆
+朋友别哭		吕方
+海阔天空		Beyond 
+光辉岁月		Beyond 
+痴心绝对		李圣杰
+一生有你		水木年华
+有多少爱可以重来		迪克牛仔
+七里香		周杰伦
+单身情歌		              林志炫
+我这个你不爱的人		迪克牛仔
+当你孤单你会想起谁		张栋梁
+原来的我		齐秦
+一路上有你		张学友
+男孩		       梁博
+需要人陪		王力宏
+像我这样的人		毛不易
+真的爱你		Beyond 
+给你们		        张宇
+爱你一万年		刘德华
+女人的选择		姜育恒
+别让我一个人醉		姜育恒
+我们的歌		王力宏
+贝加尔湖畔		李健
+活着		       郝云
+小镇姑娘		陶喆
+今夜你会不会来		黎明
+我是真的爱上你		王杰
+让一切随风		钟镇涛
+朋友		       周华健
+心跳		       王力宏
+情非得已		庾澄庆
+一场游戏一场梦		王杰
+一千个伤心的理由		张学友
+模特		李荣浩
+如果没有你		萧敬腾
+成都		赵雷
+甘心替代你		郑伊健
+千千阙歌		陈慧娴
+雨一直下		张宇
+当年情		张国荣
+冰雨		刘德华
+吻别		张学友
+朋友		谭咏麟
+沉默是金		许冠杰
+如果你是我的传说		刘德华
+笨小孩		刘德华
+她来听我的演唱会		张学友
+情人		Beyond 
+月半小夜曲		李克勤
+一生何求		陈百强
+偏偏喜欢你		陈百强
+冷雨夜		Beyond 
+无赖		郑中基
+漫步人生路		邓丽君
+用心良苦		张宇
+突然的自我		伍佰
+传奇		李健
+那些你冒险的梦		林俊杰
+你是我心爱的姑娘		汪峰
+怒放的生命		汪峰
+你就不要想起我		简弘亦
+蓝莲花		许巍
+曾经的你		许巍
+龙卷风		周杰伦
+简单爱		周杰伦
+春风十里		鹿先生乐队
+男孩别哭		海龟先生
+下一个天亮		半吨兄弟
+明天你是否依然爱我		童安格
+江南		林俊杰
+成全		林宥嘉
+恋曲1990		罗大佑
+笑看风云		郑少秋
+嘉宾		张远
+不浪漫罪名		王杰
+梦醒时分		伍佰
+北京北京		汪峰
+友情岁月		陈小春
+你把我灌醉		黄大炜
+我只在乎你		邓丽君
+无所谓		杨坤
+月亮代表我的心		齐秦
+因为爱所以爱		谢霆锋
+这世界那么多人		林志炫
+雨中的恋人们		黄凯芹
+空白格		杨宗伟
+练习		刘德华
+世界第一等		刘德华
+星晴		周杰伦
+我可以抱你吗		张惠妹
+离人		林志炫
+你的样子		林志炫
+第一次		光良
+最远的你是我最近的爱		车继玲
+稳稳的幸福		陈奕迅
+灰色轨迹		Beyond 
+离开以后             张学友
+倩女幽魂             张国荣
+只要你过得比我好   钟镇涛
+
+` 
             },
             echo: { 
                 name: "男歌 Echo", 
-                songs: `梦醒时分C
+                songs: 
+`
+梦醒时分C
 隆里电丝 (Live)E
 如果这都不算爱D
 花海F
-爱的飞行日记E` 
+爱的飞行日记E
+大城小爱C
+风继续吹C
+霍元甲F
+危险派对E
+霓虹甜心G
+我是真的爱上你E
+New Boy (Live)盘尼西林乐队C
+爱笑的眼睛C
+Monica F
+一生中最爱C#
+讲不出再见C
+安妮C
+夕阳醉了Bb
+凡人歌Eb
+当年情Eb
+爱的初体验G
+天天A转Bb
+海龟先生Gj
+初恋 (Live)F#
+曹操Eb
+春风十里E
+离人D
+十年G
+鬼迷心窍C
+晚婚 C
+问 G
+出现又离开G
+男孩C
+红日C
+海鸥G
+爱我还是他A
+找自己A
+普通朋友Eb
+爱很简单C
+就是爱你G转Ab
+稻香A
+告白气球Ab
+简单爱Bb
+一路向北C
+明明就F
+记得Eb
+好想好想E
+
+水中花D
+恋曲1990D
+成都D
+味道D
+有没有人告诉你G
+不浪漫罪名E
+天下D
+谢谢你的爱1999E
+戒烟G
+作曲家G
+水星记E
+可乐Eb
+阳光宅男C#
+你的背包E
+特别的人G
+我们俩G
+暗里着迷C
+莉莉安G
+我可以F#
+你要的爱 B
+刻在我心底的名字A#
+小城夏天LBI利比G
+修炼爱情C
+风再起时A
+鼓楼 G
+我们的时光 F
+过火Bb
+那些花儿G
+一生所爱E
+年少有为A
+寂寞难耐 G
+程艾影D
+南方姑娘F
+三十岁的女人D
+阿刁赵雷 F
+朵儿F
+风吹一夏 龙猪Ab
+有多少爱可以重来Ab
+山丘李宗盛Eb
+凄美地G
+再见杰克F
+爱要怎么说出口A
+一场游戏一场梦A
+夜夜夜夜G
+那就这样吧D
+流沙G
+爱我别走C
+月半小夜曲Ab
+小镇姑娘Bb
+给自己的歌Bb
+新不了情C
+搁浅D转Eb
+鲜花  回春丹乐队 D
+私奔郑钧F#
+需要人陪F
+失恋阵线联盟F
+康姆士乐团 你要如何，我们就如何A
+怎么说我不爱你C
+偏偏喜欢你G
+Melody陶喆 D
+悬崖C
+爱不爱我G
+玫瑰C
+梦一场G
+寂寞先生G
+不让我的眼泪陪我过夜A
+袖手旁观B
+阿飞的小蝴蝶G
+无情的雨，无情的你D
+画赵雷G
+安妮王杰C
+南山南马頔 B
+嘿!姑娘反光镜乐队G
+理想G
+小宇A
+一滴泪的时间
+理想三旬Bb
+一滴泪的时间C
+突然好想你C
+温柔G
+春风十里E
+
+` 
             },
             hainan: { 
                 name: "女歌 海南", 
-                songs: `梦醒
-隆里
-如果
-花海
-爱的` 
+                songs: 
+`
+我在人民广场吃炸鸡D
+给我一个吻bE
+春风十里bB
+红玫瑰G
+要要怎么说出口D
+小情歌D
+青花瓷D
+泪桥B
+恋曲1990bB
+当爱在靠近bB
+简单爱bE
+那么骄傲D
+七里香E
+海芋恋#F
+奔跑bB
+欧若拉D
+鲜花E
+你要跳舞吗D
+最浪漫的事B
+爱要坦荡荡D
+我要找到你bB
+风吹麦浪D
+我是一只鱼D
+你知道我在等你吗E前慢后快
+红日D
+旅行的意义D
+月半小夜曲bE
+星晴B
+海阔天空G
+老男孩bE
+至少还有你bE
+忽然之间D
+有何不可bB
+最近bE
+我爱你亲爱的姑娘C
+勇气F
+朋友B
+活着#C
+柠檬树bB
+一路向北G
+男孩别哭#C
+晴天bB
+被动E
+天下E
+喜欢你E
+特别的人D
+传奇D
+一个像夏天一个像秋天bE
+在他乡E
+鼓楼D
+同桌的你F
+我是不是你最疼爱的人G
+我的未来不是梦bE
+红色高跟鞋D
+风的季节C
+恰似你的温柔A
+当你bE
+爱一点A
+约定D
+走过咖啡屋B
+找自己D
+记得A
+最长的电影F
+可以没如果D
+那女孩对我说F
+我是真的爱上你G
+一生中最爱G
+朵D
+一滴泪的时间#F
+老情歌B
+逆战G
+爱似水仙#c
+再见杰克bB
+若是月亮没来B
+十年D
+真的爱你D
+Amani D
+寂寞难耐#c
+爱人错过D
+爱就一个字#c
+玫瑰bA
+《don’t break my heart 》#c
+背对背拥抱#F
+路灯下的小姑娘A
+小幸运bE
+` 
             },
             xiaolajiao: { 
                 name: "女歌 小辣椒", 
-                songs: `1
-2
-3
-4
-5
-6
-7` 
+                songs: 
+`
+如果的事#Cpop37
+我们能不能不分手E
+天灰 E pop14 74
+我是一只鱼afuwaA pop37 66
+如果爱忘了 C pop42 74
+最近 bE Funk16 60
+我多喜欢你 你会知道#C pop24
+莫名其妙爱上你#C Un17 13
+最后一页 C Ballad 35 
+好想你（朱主爱）F pop24 97
+山楂树之恋bB pop24 78
+摩登爱情 E pop23 100
+我爱的人E
+拿走了什么B
+心之火F
+座位（于冬然）bA
+我可以B
+爱丫爱丫A（原调）
+光年之外bE
+一千年以后E
+撕夜B
+花海A
+野花做了一场玫瑰花的梦#C
+你的微笑bE
+为爱痴狂#F
+一个人想着一个人#C
+慢冷bE
+残酷月光B
+酸酸甜甜就是我bE
+心有独钟E
+为什么你背着我爱别人C
+我要找到你bB
+想念拟人化F
+好远C
+我们的纪念#F
+笼C
+剪爱bE
+我要快乐F
+你知道我在等你吗D
+新不了情bE
+爱我还是他D
+想太多#C
+我的唇吻不到我爱的人bE
+倒带C
+成全bB
+老男孩#C
+情深深雨濛濛（赵薇）C（原调）
+爱错F（原调基础加一个半音）
+女人的选择bA
+空心#C
+分手就分手B
+我也不想这样C
+处处吻bE
+水星记G
+李白E
+漠河舞厅（戴羽彤）原调
+诺言B（郭有才）
+美人鱼D
+一路向北F
+退后D
+说了再见E
+说好的幸福呢D
+星晴A
+出卖bE
+喜欢你（陈洁仪）E
+忘了没有F
+到不了D
+戒烟bB
+指纹#C
+有点甜E
+只对你有感觉E
+喜欢你（邓紫棋）E
+孤单心事A（原调基础降一个全音）
+怎么了C
+下雨天D（芝麻Mochi）
+迷人的危险D
+你（黄霄云）F
+红色高跟鞋D
+王妃B
+我曾用心爱着你bA
+如果这就是爱情G
+遗失的心跳C
+泡沫bE
+热带雨林D
+爱笑的眼睛F
+世界上的另一个我G
+刻在我心底的名字C
+你答应我的事C
+痴心绝对bE
+野草与栀子花#F
+暖暖B
+舍得E
+说爱你bE
+天空之外D
+东西C
+当你bE
+有个爱你的人不容易#F
+怎样D
+第一次爱的人D
+说散就散#C
+只是太爱你D
+胆小鬼bE
+一次就好C
+怎样D
+从开始到现在#C
+你一定要幸福#F
+闷D
+可惜没如果D
+不是因为寂寞才想你bE
+白鸽乌鸦相爱的戏码bB
+魔鬼中的天使bE
+那就这样吧A
+淘汰#C
+没那么简单F
+当爱在靠近（原调）
+那么骄傲#C
+十年#C
+夏天的风C
+陷阱D转bE
+就让这大雨全都落下bE
+独家记忆bB
+流着泪说分手#C
+过客E
+最后的人#F
+有你
+的快乐#C
+稻香D
+等你下课
+越来越不懂C
+风吹麦浪#C
+雨一直下bA
+分手快乐D
+勇气E
+迷迭香D
+非你莫属C
+我只在乎你bE
+天后C
+不就是落单C
+小酒窝D
+断点bE
+晚婚（谭维维原调）
+爱人错过#C
+乌梅子酱B
+不能说的秘密A
+爱的飞行日记A
+不挽留没回头bE
+遇到C
+开始懂了bB
+体面bB
+梦醒时分#F
+退后#C
+dear John bE
+越来越不懂C
+太阳bE
+讲真的D
+爱就一个字C
+别怕我伤心#C
+过火#C
+黄昏C
+第一次#C
+最长的电影#F
+你那么爱她#C
+你不知道的事#C
+江南C
+安静#C
+爱如潮水#F
+需要人陪G
+海阔天空F
+至少还有你bE
+修炼爱情bE
+嘉宾C（张远）
+背叛D
+那女孩对我说bE
+爱我别走D
+简单爱#C
+第一次爱的人 D
+爱你 C
+爱的主打歌 bE
+日不落C
+love love love bE
+爱之初体验C
+失恋阵线联盟A
+姐姐妹妹站起来#A
+霓虹甜心C
+有何不可bB
+superstar  D
+别找我麻烦B
+告白气球D
+感官先生A
+我的秘密#C
+你要跳舞吗C
+我在人民广场吃炸鸡（赵大格原调）
+鼓楼#C
+六月的雨#C
+小幸运（原调）
+new boy#F
+天后B
+忽然之间D
+分手快乐D
+mojito D
+忘了你忘了我G
+安妮#C
+留什么给你bE
+后来D
+月半小夜曲bE（陈慧娴）
+龙卷风#C（邓紫棋）
+我是真的爱上你#F
+七里香#F
+晴天A
+一路向北G
+背对背拥抱E
+带你去旅行#C
+童话镇C
+他只是经过bEpop41 92
+世间美好与你环环相扣bB
+男孩别哭C
+心跳的证明bE
+秋天不回来bB pop11
+像鱼B
+
+` 
             },
         }
 
